--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://85.10.205.173:3306/dbjaka
 spring.datasource.username=msatriaihza
 spring.datasource.password=jaka171197
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-si_security_key=HHH
+si_security_key=a2lzbWFuIGltYW4g
 
 
 ## Hibernate Properties
