--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
 	<build>
 		<plugins>
 			<plugin>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.7.0</version>
+			    <configuration>
+			        <fork>true</fork>
+			        <executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
