--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+ 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -84,7 +86,7 @@
 		<plugins>
 			<plugin>
 			    <artifactId>maven-compiler-plugin</artifactId>
-			    <version>3.7.0</version>
+			    <version>3.5.1</version>
 			    <configuration>
 			        <fork>true</fork>
 			        <executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable>
@@ -93,7 +95,7 @@
 			<plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-compiler-plugin</artifactId>
-	            <version>3.7.0</version>
+	            <version>3.5.1</version>
 	            <configuration>
 	                <source>1.8</source>
 	                <target>1.8</target>
