--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 			        <executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable>
 			    </configuration>
 			</plugin>
-			<plugin>
+			<!--  <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-compiler-plugin</artifactId>
 	            <version>3.1</version>
@@ -105,13 +105,13 @@
 	                <source>1.8</source>
 	                <target>1.8</target>
 	            </configuration>
-	        </plugin>
+	        </plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-				    <includeSystemScope>true</includeSystemScope>
-				  </configuration>
+                <executable>true</executable>
+           		 </configuration>
 			</plugin>
 		</plugins>
 	</build>
