--- a/kkpbl.conf
+++ b/kkpbl.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name asdasddsa.xyz.com;
+        server_name 45.127.133.98;
 
         location / {
              proxy_pass http://localhost:8080/;
