--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=VA_FILE
 spring.main.banner-mode=off
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
-springfox.documentation.swagger.v2.host=localhost:8080
-spring.datasource.url=jdbc:mysql://85.10.205.173:3306/dbjaka
-spring.datasource.username=msatriaihza
+springfox.documentation.swagger.v2.host=45.127.133.98
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dbjaka
+spring.datasource.username=dbjaka
 spring.datasource.password=jaka171197
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 si_security_key=a2lzbWFuIGltYW4g
