--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.main.banner-mode=off
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
 springfox.documentation.swagger.v2.host=localhost:8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dbjaka
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://85.10.205.173:3306/dbjaka
+spring.datasource.username=msatriaihza
 spring.datasource.password=jaka171197
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 si_security_key=a2lzbWFuIGltYW4g
