--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,20 @@ spring.datasource.password=jaka171197
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 si_security_key=a2lzbWFuIGltYW4g
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=asdasddsa121703@gmail.com
+spring.mail.password=70911317
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database org.hibernate.dialect.SQLServerDialect
