--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 server.connection-timeout= 120000
 server.tomcat.max-threads= 500
 common.logging.service-name=VA_FILE
@@ -7,7 +7,7 @@ spring.main.banner-mode=off
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
 springfox.documentation.swagger.v2.host=45.127.133.98
-spring.datasource.url=jdbc:mysql://85.10.205.173:3306/dbjaka
+spring.datasource.url=jdbc:mysql://localhost:3306/dbjaka?serverTimezone=UTC
 spring.datasource.username=msatriaihza
 spring.datasource.password=jaka171197
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
